--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,3 @@
-# visit https://github.com/mojombo/jekyll/wiki/Configuration for more settings
-
 paginate: 10 # pagination based on number of posts
 paginate_path: "page:num"
 exclude: ["README.md"] # files to exclude
@@ -18,7 +16,7 @@ defaults:
 
 description: just another github blog
 author:
-  name: dbyll
+  name: zafk1el
   email: yuyudhn@outlook.com
   github: linuxsec
   twitter: yuyudhn
