--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ paginate_path: "page:num"
 exclude: ["README.md"] # files to exclude
 highlighter: rouge
 markdown: kramdown
-disqus: dbyll
+disqus: zafk1el-github-io
 google_analytics: dbyll
 title: zafk1el
 
