--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ paginate_path: "page:num"
 exclude: ["README.md"] # files to exclude
 highlighter: rouge
 markdown: kramdown
-disqus: zafk1el-github-io
+disqus: zafk1el
 google_analytics: dbyll
 title: dbyll
 
