--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,3 @@
-# visit https://github.com/mojombo/jekyll/wiki/Configuration for more settings
-
 paginate: 10 # pagination based on number of posts
 paginate_path: "page:num"
 exclude: ["README.md"] # files to exclude
@@ -7,25 +5,25 @@ highlighter: rouge
 markdown: kramdown
 disqus: zafk1el
 google_analytics: dbyll
-title: dbyll
+title: zafk1el
 
 defaults:
   -
     scope:
       path: "" # empty string for all files
     values:
-      title: dbyll
+      title: zafk1el
 
-description: Stylish Jekyll Theme
+description: just another jekyll blog
 author:
-  name: dbyll
-  email: dbyll@ismaildemirbilek.com
-  github: dbtek
-  twitter: dbtek
+  name: zfkl
+  email: yuyudhn@outlook.com
+  github: linuxsec
+  twitter: yuyudhn
   pinterest: asd123
   linkedin: asd123
-  bio: Your stylish, minimalist theme!
-  email_md5: 726351295ec82e145928582f595aa3aa
+  bio: nothing's ever locked
+
 
 rss_path: feed.xml
 categories_path: categories.html
