--- a/_config.yml
+++ b/_config.yml
@@ -20,8 +20,8 @@ author:
   email: yuyudhn@outlook.com
   github: linuxsec
   twitter: yuyudhn
-  pinterest: asd123
-  linkedin: asd123
+  pinterest: null
+  linkedin: null
   bio: nothing's ever locked
 
 
