--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ author:
   pinterest: null
   linkedin: null
   bio: nothing's ever locked
-
+  email_md5 : eedb62766212327b5ed2479b664566c4
 
 rss_path: feed.xml
 categories_path: categories.html
