--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ exclude: ["README.md"] # files to exclude
 highlighter: rouge
 markdown: kramdown
 disqus: zafk1el
-google_analytics: dbyll
+google_analytics: null
 title: zfkl
 
 defaults:
